--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="header">
             <img src="images/header-logo.svg" alt="Логотип России" class="header__logo">
             <div class="header__links-lang">
-                <a class="header__link header__link_lang_ru">Ru</a>
-                <a class="header__link header__lang-link_en">En</a>
+                <a class="header__link header__link_lang_ru" href="#" target="_self">Ru</a>
+                <a class="header__link header__link_lang_ru" href="#" target="_self">En</a>
             </div>
         </header>
         <main class="main">
@@ -45,18 +45,18 @@
             </section>
             <section class="photo-grid">
                 <div class="photos">
-                    <img src="images/photo-grid-train.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-atharva-tulsi.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-tuman.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-sochi.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-arisa.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-baikal.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-elbrus.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-kondratiev.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-kamchatka-1.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-kamchatka-2.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-baikal-2.jpg" alt="" class="photo-grid__item">
-                    <img src="images/photo-grid-ergaki.jpg" alt="" class="photo-grid__item">
+                    <img src="images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
+                    <img src="images/photo-grid-atharva-tulsi.jpg" alt="Горы" class="photo-grid__item">
+                    <img src="images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__item">
+                    <img src="images/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__item">
+                    <img src="images/photo-grid-arisa.jpg" alt="Лед" class="photo-grid__item">
+                    <img src="images/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__item">
+                    <img src="images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
+                    <img src="images/photo-grid-kondratiev.jpg" alt="Дорога" class="photo-grid__item">
+                    <img src="images/photo-grid-kamchatka-1.jpg" alt="Камчатка1" class="photo-grid__item">
+                    <img src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка2" class="photo-grid__item">
+                    <img src="images/photo-grid-baikal-2.jpg" alt="Байкал2" class="photo-grid__item">
+                    <img src="images/photo-grid-ergaki.jpg" alt="Туман в горах" class="photo-grid__item">
                 </div>
             </section>
             <section class="places">
@@ -64,7 +64,7 @@
                     <h2 class="place__title">Куршская коса</h2>                                      
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+                        <a href="http://park-kosa.ru" class="place__link" target="_blank" rel="noopener">park-kosa.ru</a>
                     </div>
                     <img src="images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                     <div class="place__info">
@@ -81,7 +81,7 @@
                     <h2 class="place__title">Кольский</h2>                    
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" target="_blank" rel="noopener">National Geographic</a>
                     </div>
                     <img src="images/place-kolsky.jpg" alt="Кольский" class="place__image">
                     <div class="place__info">
@@ -98,7 +98,7 @@
                     <h2 class="place__title">Алтай</h2>                    
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
+                        <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link" target="_blank" rel="noopener">Facebook</a>
                     </div>
                     <img src="images/place-altai.jpg" alt="Алтай" class="place__image">
                     <div class="place__info">
@@ -114,7 +114,7 @@
                     <h2 class="place__title">Зимний Байкал</h2>                    
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+                        <a href="https://vk.com/baikalmile" class="place__link" target="_blank" rel="noopener">https://vk.com/baikalmile</a>
                     </div>
                     <img src="images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
                     <div class="place__info">
@@ -128,7 +128,7 @@
                     <h2 class="place__title">Карелия</h2>                    
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+                        <a href="http://vodlozero.ru" class="place__link" target="_blank" rel="noopener">http://vodlozero.ru/</a>
                     </div>
                     <img src="images/place-karelia.jpg" alt="Карелия" class="place__image">
                     <div class="place__info">
@@ -146,17 +146,17 @@
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
                 </div>
                 <img src="images/cover-trains.jpg" alt="Железнодорожные пути" class="cover__image">
-                <a href=" https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link"></a>
+                <a href=" https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank" rel="noopener"></a>
             </section>
         </main>
         <footer class="footer">
             <nav class="navigation">
                 <ul class="footer__links-list">
-                    <li class="footer__list-item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-                    <li class="footer__list-item"><a href="https://yandex.ru/pogodau/maps" class="footer__link">Погода</a></li>
-                    <li class="footer__list-item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-                    <li class="footer__list-item"><a href=" https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-                    <li class="footer__list-item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+                    <li class="footer__list-item"><a href="https://yandex.ru/maps" class="footer__link" target="_blank" rel="noopener">Карты</a></li>
+                    <li class="footer__list-item"><a href="https://yandex.ru/pogodau/maps" class="footer__link" target="_blank" rel="noopener">Погода</a></li>
+                    <li class="footer__list-item"><a href="https://rasp.yandex.ru" class="footer__link" target="_blank" rel="noopener">Расписание</a></li>
+                    <li class="footer__list-item"><a href=" https://calendar.yandex.ru" class="footer__link" target="_blank" rel="noopener">Календарь</a></li>
+                    <li class="footer__list-item"><a href="https://travel.yandex.ru" class="footer__link" target="_blank" rel="noopener">Путешествия</a></li>
                 </ul>
             </nav>
             <p class="footer__copyright">© 2020. Ярослав</p>
