--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link rel="stylesheet" href="pages/index.css">
+  <link rel="stylesheet" href="vendor/fonts/Inter Web/inter.css">
   <title>Путешествия по России</title>
 </head>
 <body class="root">
