--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link rel="stylesheet" href="pages/index.css">
-  <link rel="stylesheet" href="vendor/fonts/Inter Web/inter.css">
   <title>Путешествия по России</title>
 </head>
 <body class="root">
     <div class="page">
         <header class="header">
             <img src="images/header-logo.svg" alt="Логотип России" class="header__logo">
-            <div class="header__links-lang">
-                <a class="header__link header__link_lang_ru" href="#" target="_self">Ru</a>
-                <a class="header__link header__link_lang_ru" href="#" target="_self">En</a>
-            </div>
+            <ul class="header__links-lang">
+                <li class="header__list-item"><a class="header__link header__link_lang_ru" href="#" target="_self">Ru</a></li>
+                <li class="header__list-item"><a class="header__link header__link_lang_en" href="#" target="_self">En</a></li>
+            </ul>
         </header>
         <main class="main">
             <section class="lead">
