--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li class="header__list-item"><a class="header__link" href="#" target="_self">En</a></li>
             </ul>
         </header>
-        <main class="main">
+        <main>
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -137,16 +137,14 @@
                 </article>
             </section>
             <section class="cover">
-                <div class="cover__text">
+                <a href=" https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank" rel="noopener">
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                </div>
-                <img src="images/cover-trains.jpg" alt="Железнодорожные пути" class="cover__image">
-                <a href=" https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank" rel="noopener"></a>
+                </a>
             </section>
         </main>
         <footer class="footer">
-            <nav class="navigation">
+            <nav>
                 <ul class="footer__links-list">
                     <li class="footer__list-item"><a href="https://yandex.ru/maps" class="footer__link" target="_blank" rel="noopener">Карты</a></li>
                     <li class="footer__list-item"><a href="https://yandex.ru/pogodau/maps" class="footer__link" target="_blank" rel="noopener">Погода</a></li>
