--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, 
                     достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li class="intro__item-list">Часовых поясов <span class="digit">11</span></li>
-                    <li class="intro__item-list">Объектов природного наследия ЮНЕСКО <span class="digit">12</span></li>
-                    <li class="intro__item-list">Объектов культурного наследия ЮНЕСКО <span class="digit">16</span></li>
-                    <li class="intro__item-list">Природных заповедников <span class="digit">105</span></li>
-                    <li class="intro__item-list">Аэропортов <span class="digit">241</span></li>
+                    <li class="intro__item-list">Часовых поясов <span class="itro__digit">11</span></li>
+                    <li class="intro__item-list">Объектов природного наследия ЮНЕСКО <span class="itro__digit">12</span></li>
+                    <li class="intro__item-list">Объектов культурного наследия ЮНЕСКО <span class="itro__digit">16</span></li>
+                    <li class="intro__item-list">Природных заповедников <span class="itro__digit">105</span></li>
+                    <li class="intro__item-list">Аэропортов <span class="itro__digit">241</span></li>
                 </ul>
             </section>
             <section class="photo-grid">                
